--- a/templates/details-view.html
+++ b/templates/details-view.html
@@ -61,19 +61,18 @@
                     </div>
                 </div>
 
-                <form class="form">
+                <div class="form">
 
                     <!-- Personal -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Personal details</legend>
+                    <div class="form__div">
 
                         <div class="form__item">
-                            <div class="form__label" for="name">Name</div>
+                            <div class="form__label">Name</div>
                             <div data-form="name"></div>
                         </div>
 
                         <div class="form__item">
-                            <p class="form__label" for="dob">Date of birth</p>
+                            <p class="form__label">Date of birth</p>
                             <div data-date>
                                 <span data-form="dob-year"></span>
                                 <span data-form="dob-month"></span>
@@ -113,11 +112,10 @@
                             <div data-form="personal-email"></div>
                             <div data-form="preferred-3" data-no-hide="true"></div>
                         </div>
-                    </fieldset>
+                    </div>
 
                     <!-- Training details -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Training details</legend>
+                    <div class="form__div">
 
                         <div class="form__item">
                             <p class="form__label">Programme</p>
@@ -159,12 +157,12 @@
                             <p class="form__label">HEI</p>
                             <div data-form="hei"></div>
                         </div>
-                    </fieldset>
+                    </div>
 
                     <!-- Training contacts -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Training contacts</legend>
-                        <fieldset class="form__fieldset form__fieldset--nested">
+                    <div class="form__div">
+
+                        <div class="form__div form__div--nested">
                             <p class="form__sub-legend">Training officer</p>
 
                             <div class="form__item">
@@ -173,7 +171,7 @@
                             </div>
 
                             <div class="form__item">
-                                <p class="form__label" for="contracts-training-from">From</p>
+                                <p class="form__label">From</p>
                                 <div data-date>
                                     <span data-form="contracts-training-from-year"></span>
                                     <span data-form="contracts-training-from-month"></span>
@@ -187,7 +185,7 @@
                             </div>
 
                             <div class="form__item">
-                                <p class="form__label" for="contracts-training-to">To</p>
+                                <p class="form__label">To</p>
                                 <div data-date>
                                     <span data-form="contracts-training-to-year"></span>
                                     <span data-form="contracts-training-to-month"></span>
@@ -204,9 +202,9 @@
                                 <p class="form__label">Telephone</p>
                                 <div data-form="training-telephone"></div>
                             </div>
-                        </fieldset>
+                        </div>
 
-                        <fieldset class="form__fieldset form__fieldset--nested">
+                        <div class="form__div form__div--nested">
                             <p class="form__sub-legend">Head of department</p>
 
                             <div class="form__item">
@@ -215,7 +213,7 @@
                             </div>
 
                             <div class="form__item">
-                                <p class="form__label" for="training-head-of-department-from">From</p>
+                                <p class="form__label">From</p>
                                 <div data-date>
                                     <span data-form="training-head-of-department-from-year"></span>
                                     <span data-form="training-head-of-department-from-month"></span>
@@ -229,7 +227,7 @@
                             </div>
 
                             <div class="form__item">
-                                <p class="form__label" for="training-head-of-department-to">To</p>
+                                <p class="form__label">To</p>
                                 <div data-date>
                                     <span data-form="training-head-of-department-to-year"></span>
                                     <span data-form="training-head-of-department-to-month"></span>
@@ -246,12 +244,11 @@
                                 <p class="form__label">Telephone</p>
                                 <div data-form="training-head-of-department-telephone"></div>
                             </div>
-                        </fieldset>
-                    </fieldset>
+                        </div>
+                    </div>
 
                     <!-- Employment and training sites -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Employment and training sites</legend>
+                    <div class="form__div">
 
                         <div class="form__item">
                             <p class="form__label">Training trust</label>
@@ -264,7 +261,7 @@
                         </div>
 
                         <div class="form__item">
-                            <p class="form__label" for="training-from">From</p>
+                            <p class="form__label">From</p>
                             <div data-date>
                                 <span data-form="training-from-year"></span>
                                 <span data-form="training-from-month"></span>
@@ -273,18 +270,18 @@
                         </div>
 
                         <div class="form__item">
-                            <p class="form__label" for="training-to">To</p>
+                            <p class="form__label">To</p>
                             <div data-date>
                                 <span data-form="training-to-year"></span>
                                 <span data-form="training-to-month"></span>
                                 <span data-form="training-to-day"></span>
                             </div>
                         </div>
-                    </fieldset>
+                    </div>
 
                      <!-- Pre-employment -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Pre-employment</legend>
+                    <div class="form__div">
+
                         <p class="form__sub-legend">Previous qualifications</p>
 
                         <div class="form__item">
@@ -321,7 +318,7 @@
                             <div class="form__label">Verified</div>
                             <div data-form="verified-no"></div>
                         </div>
-                    </fieldset>
+                    </div>
                 </form>
             </div>
         </main>
