--- a/templates/progress-view.html
+++ b/templates/progress-view.html
@@ -61,11 +61,10 @@
                     </div>
                 </div>
 
-                <form class="form">
+                <div class="form">
 
                     <!-- Workplace portfolio -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Workplace portfolio</legend>
+                    <div class="form__div">
 
                         <div class="form__item">
                             <div class="form__label form__label--disabled">Overall progress</div>
@@ -185,12 +184,12 @@
                             <p class="form__label">Countersign required</p>
                             <div>No</div>
                         </div>
-                    </fieldset>
+                    </div>
 
                     <!-- Assessment results -->
-                    <fieldset class="form__fieldset">
+                    <div class="form__div">
                         <div class="form__item">
-                            <p class="form__label" for="assessment-date">Award date</p>
+                            <p class="form__label">Award date</p>
                             <div data-date>
                                 <span data-form="assessment-date-year"></span>
                                 <span data-form="assessment-date-month"></span>
@@ -214,7 +213,7 @@
                         </div>
 
                         <div class="form__item">
-                            <p class="form__label" for="next-assessment">Next assessment</p>
+                            <p class="form__label">Next assessment</p>
                             <div data-date>
                                 <span data-form="next-assessment-year"></span>
                                 <span data-form="next-assessment-month"></span>
@@ -231,11 +230,10 @@
                             <div class="form__label">Reasonable adjustments</div>
                             <div data-form="reasonable-adjustments-no"></div>
                         </div>
-                    </fieldset>
+                    </div>
 
                     <!-- Training contacts -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">HEI qualifications</legend>
+                    <div class="form__div">
                         <div class="form__item">
                             <div class="form__label">Qualification complete</div>
                             <div data-form="qualification-complete-yes"></div>
@@ -247,7 +245,7 @@
                         </div>
 
                         <div class="form__item">
-                            <p class="form__label" for="award-date">Award date</p>
+                            <p class="form__label">Award date</p>
                             <div data-date>
                                 <span data-form="award-date-year"></span>
                                 <span data-form="award-date-month"></span>
@@ -269,11 +267,10 @@
                             <div class="form__label">Extension given</div>
                             <div data-form="extension-given-no"></div>
                         </div>
-                    </fieldset>
+                    </div>
 
                     <!-- Programme certification and registration -->
-                    <fieldset class="form__fieldset">
-                        <legend class="form__legend">Programme certification and registration</legend>
+                    <div class="form__div">
 
                         <div class="form__item">
                             <div class="form__label">Programme certification obtained</div>
@@ -364,8 +361,8 @@
                             <div class="form__label">First employment after training</div>
                             <div data-form="first-employment-after-training"></div>
                         </div>
-                    </fieldset>
-                </form>
+                    </div>
+                </div>
             </div>
         </main>
         <script src="../assets/dist/js/main.js"></script>
