--- a/templates/support-view.html
+++ b/templates/support-view.html
@@ -61,10 +61,10 @@
                     </div>
                 </div>
 
-                <form class="form">
+                <div class="form">
 
                     <!-- Personal -->
-                    <fieldset class="form__fieldset">
+                    <div class="form__div">
                         <legend class="form__legend">Bereavement</legend>
 
                         <div class="form__item">
@@ -90,10 +90,10 @@
                             <p class="form__label">Support status</p>
                             <div class="tag tag--red tag--width-auto" data-form="support-status"></div>
                         </div>
-                    </fieldset>
+                    </div>
 
                     <!-- Case log -->
-                    <fieldset class="form__fieldset">
+                    <div class="form__div">
                         <legend class="form__legend">Case log</legend>
 
                         <div class="form__item">
@@ -120,8 +120,8 @@
                             <div data-form="case-2-description"></div>
                         </div>
 
-                    </fieldset>
-                </form>
+                    </div>
+                </div>
             </div>
         </main>
         <script src="../assets/dist/js/main.js"></script>
