--- a/templates/details-view.html
+++ b/templates/details-view.html
@@ -29,10 +29,10 @@
                                 <a href="#" class="header__link">Dashboard</a>
                             </li>
                             <li class="header__list-item header__list-item--active">
-                                <a href="details-edit.html" class="header__link">Trainee details</a>
+                                <a href="details-view.html" class="header__link">Trainee details</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="progress-edit.html" class="header__link">Progress</a>
+                                <a href="progress-view.html" class="header__link">Progress</a>
                             </li>
                             <li class="header__list-item">
                                 <a href="support-index.html" class="header__link">Support</a>
