--- a/templates/support-index.html
+++ b/templates/support-index.html
@@ -29,10 +29,10 @@
                                 <a href="#" class="header__link">Dashboard</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="details-edit.html" class="header__link">Trainee details</a>
+                                <a href="details-view.html" class="header__link">Trainee details</a>
                             </li>
                             <li class="header__list-item">
-                                <a href="progress-edit.html" class="header__link">Progress</a>
+                                <a href="progress-view.html" class="header__link">Progress</a>
                             </li>
                             <li class="header__list-item header__list-item--active">
                                 <a href="support-index.html" class="header__link">Support</a>
@@ -64,7 +64,7 @@
                         <div class="form__item">
                             <div class="form__label">Bereavement</div>
                             <div>
-                                <a href="support-edit.html">19 May 2022</a>
+                                <a href="support-view.html">19 May 2022</a>
                             </div>
                         </div>
                     </fieldset>
