--- a/templates/support-view.html
+++ b/templates/support-view.html
@@ -64,7 +64,7 @@
                 <div class="form">
 
                     <!-- Personal -->
-                    <div class="form__div">
+                    <div class="form__fieldset">
                         <legend class="form__legend">Bereavement</legend>
 
                         <div class="form__item">
@@ -93,7 +93,7 @@
                     </div>
 
                     <!-- Case log -->
-                    <div class="form__div">
+                    <div class="form__fieldset">
                         <legend class="form__legend">Case log</legend>
 
                         <div class="form__item">
