--- a/templates/details-view.html
+++ b/templates/details-view.html
@@ -63,8 +63,9 @@
 
                 <div class="form">
 
-                    <!-- Personal -->
-                    <div class="form__div">
+                    <!-- Personal details -->
+                    <div class="form__fieldset">
+                        <legend class="form__legend">Personal details</legend>
 
                         <div class="form__item">
                             <div class="form__label">Name</div>
@@ -115,8 +116,8 @@
                     </div>
 
                     <!-- Training details -->
-                    <div class="form__div">
-
+                    <div class="form__fieldset">
+                        <legend class="form__legend">Training details</legend>
                         <div class="form__item">
                             <p class="form__label">Programme</p>
                             <div data-form="programme"></div>
@@ -160,9 +161,10 @@
                     </div>
 
                     <!-- Training contacts -->
-                    <div class="form__div">
+                    <div class="form__fieldset">
+                        <legend class="form__legend">Training contacts</legend>
 
-                        <div class="form__div form__div--nested">
+                        <div class="form__fieldset form__fieldset--nested">
                             <p class="form__sub-legend">Training officer</p>
 
                             <div class="form__item">
@@ -204,7 +206,7 @@
                             </div>
                         </div>
 
-                        <div class="form__div form__div--nested">
+                        <div class="form__fieldset form__fieldset--nested">
                             <p class="form__sub-legend">Head of department</p>
 
                             <div class="form__item">
@@ -248,7 +250,8 @@
                     </div>
 
                     <!-- Employment and training sites -->
-                    <div class="form__div">
+                    <div class="form__fieldset">
+                        <legend class="form__legend">Employment and training sites</legend>
 
                         <div class="form__item">
                             <p class="form__label">Training trust</label>
@@ -280,7 +283,7 @@
                     </div>
 
                      <!-- Pre-employment -->
-                    <div class="form__div">
+                    <div class="form__fieldset">
 
                         <p class="form__sub-legend">Previous qualifications</p>
 
