--- a/templates/progress-view.html
+++ b/templates/progress-view.html
@@ -64,7 +64,8 @@
                 <div class="form">
 
                     <!-- Workplace portfolio -->
-                    <div class="form__div">
+                    <div class="form__fieldset">
+                        <legend class="form__legend">Workplace portfolio</legend>
 
                         <div class="form__item">
                             <div class="form__label form__label--disabled">Overall progress</div>
@@ -187,7 +188,8 @@
                     </div>
 
                     <!-- Assessment results -->
-                    <div class="form__div">
+                    <div class="form__fieldset">
+                        <legend class="form__legend">Assessment results</legend>
                         <div class="form__item">
                             <p class="form__label">Award date</p>
                             <div data-date>
@@ -232,8 +234,9 @@
                         </div>
                     </div>
 
-                    <!-- Training contacts -->
-                    <div class="form__div">
+                    <!-- HEI qualifications -->
+                    <div class="form__fieldset">
+                        <legend class="form__legend">HEI qualifications</legend>
                         <div class="form__item">
                             <div class="form__label">Qualification complete</div>
                             <div data-form="qualification-complete-yes"></div>
@@ -270,8 +273,8 @@
                     </div>
 
                     <!-- Programme certification and registration -->
-                    <div class="form__div">
-
+                    <div class="form__fieldset">
+                        <legend class="form__legend">Programme certification and registration</legend>
                         <div class="form__item">
                             <div class="form__label">Programme certification obtained</div>
                             <div data-form="programme-certification-obtained-yes"></div>
