Fix more headings

--- a/templates/details-view.html
+++ b/templates/details-view.html
@@ -284,7 +284,7 @@
 
                      <!-- Pre-employment -->
                     <div class="form__fieldset">
-
+                        <legend class="form__legend">Pre-employment</legend>
                         <p class="form__sub-legend">Previous qualifications</p>
 
                         <div class="form__item">
