Add additional fields and populate content

--- a/templates/support-edit.html
+++ b/templates/support-edit.html
@@ -89,11 +89,28 @@
                             <label class="form__label" for="support-status">Support status</label>
                             <div class="custom-select custom-select--two-thirds">
                                 <select id="support-status" name="support-status" class="custom-select__item" data-form="support-status">
-                                    <option value="Suspend">Suspend</option>
-                                    <option value="Option two">Option two</option>
-                                    <option value="Option three">Option three</option>
+                                    <option value="Open">Open</option>
+                                    <option value="Suspended">Suspended</option>
+                                    <option value="Closed">Closed</option>
                                 </select>
                             </div>
+                        </div>
+                        <div class="form__item">
+                            <label class="form__label" for="support-case-manager">Case manager</label>
+                            <div class="custom-select custom-select--two-thirds">
+                                <select id="support-case-manager" name="support-case-manager" class="custom-select__item" data-form="support-case-manager">
+                                    <option value="Katherine Bayley">Katherine Bayley</option>
+                                    <option value="Mehwish Khan">Mehwish Khan</option>
+                                    <option value="Chris Perkins">Chris Perkins</option>
+                                    <option value="Robert Richards">Robert Richards</option>
+                                    <option value="Farheen Sharif">Farheen Sharif</option>
+                                    <option value="Gill Stephens">Gill Stephens</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form__item">
+                            <label class="form__label" for="support-case-manager-email">Case manager email</label>
+                            <input class="form__input" type="email" id="support-case-manager-email" name="support-case-manager-email" data-form="support-case-manager-email" value="mehwish.khan@nhsmail.net"/>
                         </div>
                     </fieldset>
 
