--- a/templates/support-view.html
+++ b/templates/support-view.html
@@ -90,6 +90,14 @@
                             <p class="form__label">Support status</p>
                             <div class="tag tag--red tag--width-auto" data-form="support-status"></div>
                         </div>
+                        <div class="form__item">
+                            <p class="form__label">Case manager</p>
+                            <div data-form="support-case-manager"></div>
+                        </div>
+                        <div class="form__item">
+                            <p class="form__label">Case manager email</p>
+                            <div data-form="support-case-manager-email"></div>
+                        </div>
                     </div>
 
                     <!-- Case log -->
