--- a/assets/src/sass/components/forms/_select.scss
+++ b/assets/src/sass/components/forms/_select.scss
@@ -57,7 +57,7 @@
         border: none;
         border-radius: 0;
         cursor: pointer;
-        padding: 8px 10px;
+        padding: 10px 10px 6px;
         width: 100%;
         color: $color--black;
         line-height: 24px;
